fix: compile error

--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "hardhat-deploy": "^0.11.20",
     "hardhat-preprocessor": "^0.1.4",
     "pre-commit": "^1.2.2",
-    "prettier": "^2.3.1",
+    "prettier": "1.12.1",
     "prettier-plugin-solidity": "^1.0.0-beta.13",
     "ts-node": "^10.7.0",
     "typechain": "^8.0.0",
