--- a/package.json
+++ b/package.json
@@ -28,17 +28,17 @@
     "hardhat-deploy": "^0.11.20",
     "hardhat-preprocessor": "^0.1.4",
     "pre-commit": "^1.2.2",
-    "prettier": "1.12.1",
+    "prettier": "^2.6.1",
     "prettier-plugin-solidity": "^1.0.0-beta.13",
     "ts-node": "^10.7.0",
     "typechain": "^8.0.0",
     "typescript": "^4.6.4"
   },
   "scripts": {
-    "lint": "prettier \"./**\" --write",
+    "lint": "prettier \"./**\" --write --ignore-unknown",
     "build": "hardhat export-abi && tsc --project lib.tsconfig.json",
     "abi": "hardhat export-abi",
     "compile": "forge build",
-    "test": "prettier --write $(git diff --name-only --diff-filter d | xargs) && forge test"
+    "test": "forge test"
   }
 }
