--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@ethersproject/bytes": "^5.7.0",
     "@nomiclabs/hardhat-ethers": "^2.1.1",
     "@nomiclabs/hardhat-etherscan": "^3.1.0",
-    "@socket.tech/dl-core": "2.4.0-test.3",
+    "@socket.tech/dl-core": "2.4.0-test.7",
     "@typechain/ethers-v5": "^10.0.0",
     "@typechain/hardhat": "^6.0.0",
     "@types/chai": "^4.3.0",
@@ -39,6 +39,6 @@
     "build": "hardhat export-abi && tsc --project lib.tsconfig.json",
     "abi": "hardhat export-abi",
     "compile": "forge build",
-    "test": "forge test"
+    "test": "prettier --write $(git diff --name-only --diff-filter d | xargs) && forge test"
   }
 }
