--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@ethersproject/bytes": "^5.7.0",
     "@nomiclabs/hardhat-ethers": "^2.1.1",
     "@nomiclabs/hardhat-etherscan": "^3.1.0",
+    "@nomiclabs/hardhat-waffle": "^2.0.3",
     "@socket.tech/dl-core": "2.4.0-test.7",
     "@typechain/ethers-v5": "^10.0.0",
     "@typechain/hardhat": "^6.0.0",
@@ -21,6 +22,7 @@
     "@types/node": "^18.11.9",
     "@types/yargs": "^17.0.22",
     "dotenv": "^16.0.3",
+    "ethereum-waffle": "^3.2.0",
     "ethers": "^5.6.6",
     "hardhat": "^2.9.5",
     "hardhat-abi-exporter": "^2.10.1",
@@ -39,6 +41,6 @@
     "build": "hardhat export-abi && tsc --project lib.tsconfig.json",
     "abi": "hardhat export-abi",
     "compile": "forge build",
-    "test": "prettier --write $(git diff --name-only --diff-filter d | xargs) && forge test"
+    "test": "forge test"
   }
 }
