--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@nomiclabs/hardhat-ethers": "^2.1.1",
     "@nomiclabs/hardhat-etherscan": "^3.1.0",
     "@nomiclabs/hardhat-waffle": "^2.0.3",
-    "@socket.tech/dl-core": "2.4.0-test.7",
+    "@socket.tech/dl-core": "2.4.1",
     "@typechain/ethers-v5": "^10.0.0",
     "@typechain/hardhat": "^6.0.0",
     "@types/chai": "^4.3.0",
