fix: slug/key hardhat

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,24 @@
-ETHEREUM_RPC_URL=
-POLYGON_RPC_URL=
+NODE_ENV=''
+DEPLOYMENT_MODE=''
 
-PRIVATE_KEY=
-ETHERSCAN_API_KEY=
-POLYGONSCAN_API_KEY=
+ARBISCAN_API_KEY=''
+BSCSCAN_API_KEY=''
+ETHERSCAN_API_KEY=''
+OPTIMISM_API_KEY=''
+POLYGONSCAN_API_KEY=''
+
+ARBITRUM_RPC=''
+ARB_GOERLI_RPC=''
+OPTIMISM_RPC=''
+OPTIMISM_GOERLI_RPC=''
+POLYGON_RPC=''
+POLYGON_MUMBAI_RPC=''
+BSC_RPC=''
+BSC_TESTNET_RPC=''
+ETHEREUM_RPC=''
+GOERLI_RPC=''
+SEPOLIA_RPC=''
+AEVO_TESTNET_RPC=''
+AEVO_RPC=''
+LYRA_TESTNET_RPC=''
+LYRA_RPC=''
