feat: lyra testnet deployment

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
-NODE_ENV=''
-DEPLOYMENT_MODE=''
+DEPLOYMENT_MODE='' # dev, surge, prod
+PROJECT='' # aevo, lyra
 
 ARBISCAN_API_KEY=''
 BSCSCAN_API_KEY=''
