--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@ethersproject/bytes": "^5.7.0",
     "@nomiclabs/hardhat-ethers": "^2.1.1",
     "@nomiclabs/hardhat-etherscan": "^3.1.0",
-    "@socket.tech/dl-core": "2.4.1",
+    "@socket.tech/dl-core": "2.4.0-test.9",
     "@typechain/ethers-v5": "^10.0.0",
     "@typechain/hardhat": "^6.0.0",
     "@types/mocha": "^9.1.0",
