feat: revert on zero amount

--- a/foundry.toml
+++ b/foundry.toml
@@ -3,5 +3,7 @@ src = 'src'
 out = 'out'
 libs = ['lib']
 solc_version = '0.8.13'
+optimizer = true
+optimizer_runs = 99999
 
 # See more config options https://github.com/foundry-rs/foundry/tree/master/config
