--- a/package.json
+++ b/package.json
@@ -1,19 +1,23 @@
 {
-  "name": "socketDL-examples",
+  "name": "@socket.tech/socket-plugs",
   "license": "MIT",
   "version": "1.0.0",
-  "description": "Examples for socket data layer.",
-  "main": "index.js",
+  "description": "Plugs built using socket's data layer",
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "files": [
     "dist",
-    "artifacts/abi"
+    "artifacts/abi",
+    "deployments"
   ],
+  "publishConfig": {
+    "access": "public"
+  },
   "repository": "git@github.com:SocketDotTech/socketDL-examples.git",
   "devDependencies": {
     "@ethersproject/bytes": "^5.7.0",
     "@nomiclabs/hardhat-ethers": "^2.1.1",
     "@nomiclabs/hardhat-etherscan": "^3.1.0",
-    "@socket.tech/dl-core": "2.4.11-test.1",
     "@typechain/ethers-v5": "^10.0.0",
     "@typechain/hardhat": "^6.0.0",
     "@types/mocha": "^9.1.0",
@@ -34,10 +38,17 @@
     "typescript": "^4.6.4"
   },
   "scripts": {
-    "lint": "prettier \"./**\" --write --ignore-unknown",
+    "lint": "prettier \"./**\" --write",
     "build": "hardhat export-abi && tsc --project lib.tsconfig.json",
     "abi": "hardhat export-abi",
     "compile": "forge build",
     "test": "forge test"
+  },
+  "pre-commit": [
+    "lint",
+    "compile"
+  ],
+  "dependencies": {
+    "@socket.tech/dl-core": "2.4.13"
   }
 }
