--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,6 @@
     "declaration": true,
     "resolveJsonModule": true
   },
-  "include": ["./src", "./tasks", "./test", "./script"],
+  "include": ["./src", "./script", "./hardhat.config.ts"],
   "files": ["./hardhat.config.ts"]
 }
