--- a/foundry.toml
+++ b/foundry.toml
@@ -5,5 +5,6 @@ libs = ['lib']
 solc_version = '0.8.13'
 optimizer = true
 optimizer_runs = 99999
+no-match-contract='LyraBurnUSDC'
 
 # See more config options https://github.com/foundry-rs/foundry/tree/master/config
