feat: add sepolia testnets support

--- a/.env.example
+++ b/.env.example
@@ -9,8 +9,10 @@ POLYGONSCAN_API_KEY=''
 
 ARBITRUM_RPC=''
 ARB_GOERLI_RPC=''
+ARB_SEPOLIA_RPC=''
 OPTIMISM_RPC=''
 OPTIMISM_GOERLI_RPC=''
+OPTIMISM_SEPOLIA_RPC=''
 POLYGON_RPC=''
 POLYGON_MUMBAI_RPC=''
 BSC_RPC=''
