--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@socket.tech/socket-plugs",
   "license": "MIT",
-  "version": "1.0.10",
+  "version": "1.0.10-test.1",
   "description": "Plugs built using socket's data layer",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
@@ -49,6 +49,6 @@
     "compile"
   ],
   "dependencies": {
-    "@socket.tech/dl-core": "2.4.14"
+    "@socket.tech/dl-core": "2.4.15-test.1"
   }
 }
