--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "@socket.tech/socket-plugs",
   "license": "MIT",
-  "version": "1.0.11",
+  "version": "1.0.11-test.1",
   "description": "Plugs built using socket's data layer",
-  "main": "./dist/index.js",
-  "types": "./dist/index.d.ts",
+  "main": "./dist/src/index.js",
+  "types": "./dist/src/index.d.ts",
   "files": [
     "dist",
     "artifacts/abi",
