feat: mainnet deployment

--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,7 @@ BSCSCAN_API_KEY=''
 ETHERSCAN_API_KEY=''
 OPTIMISM_API_KEY=''
 POLYGONSCAN_API_KEY=''
+BASESCAN_API_KEY=''
 
 ARBITRUM_RPC=''
 ARB_GOERLI_RPC=''
@@ -27,3 +28,5 @@ LYRA_RPC=''
 SX_NETWORK_TESTNET_RPC=''
 MODE_TESTNET_RPC=''
 VICTION_TESTNET_RPC=''
+BASE_RPC=''
+MODE_RPC=''
