fix: repo setup

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-DEPLOYMENT_MODE='' # dev, surge, prod
+DEPLOYMENT_MODE=prod # dev, surge, prod
 PROJECT='' # aevo, lyra
 
 ARBISCAN_API_KEY=''
@@ -25,3 +25,6 @@ AEVO_RPC=''
 LYRA_TESTNET_RPC=''
 LYRA_RPC=''
 SX_NETWORK_TESTNET_RPC=''
+
+SOCKET_SIGNER_KEY=''
+SOCKET_OWNER_ADDRESS=''
