feat: reya deploy support

--- a/.env.example
+++ b/.env.example
@@ -31,6 +31,7 @@ VICTION_TESTNET_RPC=''
 BASE_RPC=''
 MODE_RPC=''
 ANCIENT8_TESTNET_RPC=''
+REYA_CRONOS_ORBIT_RPC=''
 
 SOCKET_SIGNER_KEY=''
 SOCKET_OWNER_ADDRESS=''
