updated lyra bridge deployments and script modifications for convenience

--- a/.prettierignore
+++ b/.prettierignore
@@ -9,8 +9,7 @@ out
 typechain-types
 
 .DS_Store
-.env
-.env.example
+.env*
 .gas-snapshot
 .gitignore
 .gitmodules
@@ -25,3 +24,4 @@ yarn.lock
 .git/*
 *.jpg
 lcov.info
+.idea
