--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,7 @@
-DEPLOYMENT_MODE=prod # dev, surge, prod
+DEPLOYMENT_MODE='prod' # dev, surge, prod
 PROJECT='' # aevo, lyra
+TOKEN='' # WETH, USDT
+DRY_RUN='false' # true, false
 
 ARBISCAN_API_KEY=''
 BSCSCAN_API_KEY=''
