feat:  supertoken scripts done

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,7 @@ DEPLOYMENT_MODE='prod' # dev, surge, prod
 PROJECT='' # aevo, lyra
 TOKEN='' # WETH, USDT
 DRY_RUN='false' # true, false
+PROJECT_TYPE='' # supertoken, superbridge
 
 ARBISCAN_API_KEY=''
 BSCSCAN_API_KEY=''
