--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,7 @@
 DEPLOYMENT_MODE='prod' # dev, surge, prod
-PROJECT='' # aevo, lyra
+
+TOKEN_PROJECT='' # for supertoken
+PROJECT='' # for superbridge aevo, lyra
 TOKEN='' # WETH, USDT
 DRY_RUN='false' # true, false
 PROJECT_TYPE='' # supertoken, superbridge
