--- a/.env.example
+++ b/.env.example
@@ -33,6 +33,7 @@ VICTION_TESTNET_RPC=''
 BASE_RPC=''
 MODE_RPC=''
 ANCIENT8_TESTNET_RPC=''
+SYNDR_SEPOLIA_L3_RPC=''
 
 SOCKET_SIGNER_KEY=''
 SOCKET_OWNER_ADDRESS=''
