--- a/.env.example
+++ b/.env.example
@@ -36,6 +36,7 @@ VICTION_TESTNET_RPC=''
 BASE_RPC=''
 MODE_RPC=''
 ANCIENT8_TESTNET_RPC=''
+REYA_CRONOS_RPC=''
 
 SOCKET_SIGNER_KEY=''
 SOCKET_OWNER_ADDRESS=''
