chore: cleanup, added readme

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,7 @@
 DEPLOYMENT_MODE='prod' # dev, surge, prod
 
-TOKEN_PROJECT='' # for supertoken
 PROJECT='' # for superbridge aevo, lyra
-TOKEN='' # WETH, USDT
+TOKENS='' # WETH, USDT
 DRY_RUN='false' # true, false
 PROJECT_TYPE='' # supertoken, superbridge
 
