feat: reya mainnet deployment

--- a/.env.example
+++ b/.env.example
@@ -36,6 +36,7 @@ BASE_RPC=''
 MODE_RPC=''
 ANCIENT8_TESTNET_RPC=''
 REYA_CRONOS_RPC=''
+REYA_RPC=''
 
 SOCKET_SIGNER_KEY=''
 SOCKET_OWNER_ADDRESS=''
