feat: auto update of deployment files done

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,10 @@
-DEPLOYMENT_MODE='prod' # dev, surge, prod
-
 PROJECT='' # for superbridge aevo, lyra
 TOKENS='' # WETH, USDT
 DRY_RUN='false' # true, false
 PROJECT_TYPE='' # supertoken, superbridge
+
+OWNER_SIGNER_KEY=''
+OWNER_ADDRESS=''
 
 ARBISCAN_API_KEY=''
 BSCSCAN_API_KEY=''
@@ -38,5 +39,3 @@ ANCIENT8_TESTNET_RPC=''
 REYA_CRONOS_RPC=''
 REYA_RPC=''
 
-SOCKET_SIGNER_KEY=''
-SOCKET_OWNER_ADDRESS=''
