--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "compile"
   ],
   "dependencies": {
-    "@socket.tech/dl-core": "^2.4.25"
+    "@socket.tech/dl-core": "^2.4.39",
+    "prompts": "^2.4.2"
   }
 }
