--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
   },
   "scripts": {
     "lint": "prettier \"./**\" --write",
-    "build": "hardhat export-abi && tsc --project lib.tsconfig.json",
+    "build": "hardhat export-abi && hardhat typechain && tsc --project lib.tsconfig.json",
     "abi": "hardhat export-abi",
     "compile": "forge build",
     "test": "forge test"
