--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
   ],
   "dependencies": {
     "lodash": "^4.17.21",
-    "@socket.tech/dl-core": "^2.4.41",
+    "@socket.tech/dl-core": "https://github.com/KintoXYZ/socket-DL.git#devnet",
     "prompts": "^2.4.2"
   }
 }
