--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "build": "hardhat export-abi && hardhat typechain && yarn buildJson && tsc --project lib.tsconfig.json",
     "buildJson": "npx ts-node ./script/helpers/updateJsons.ts",
     "abi": "hardhat export-abi",
-    "compile": "forge build",
+    "compile": "npx hardhat compile",
+    "forge-compile": "forge build",
     "test": "forge test"
   },
   "pre-commit": [
