--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "repository": "git@github.com:SocketDotTech/socketDL-examples.git",
   "devDependencies": {
     "@ethersproject/bytes": "^5.7.0",
+    "@nomicfoundation/hardhat-foundry": "^1.1.2",
     "@nomiclabs/hardhat-ethers": "^2.1.1",
     "@nomiclabs/hardhat-etherscan": "^3.1.0",
     "@typechain/ethers-v5": "^10.0.0",
@@ -25,7 +26,7 @@
     "@types/yargs": "^17.0.22",
     "dotenv": "^16.0.3",
     "ethers": "^5.6.6",
-    "hardhat": "^2.9.5",
+    "hardhat": "^2.17.2",
     "hardhat-abi-exporter": "^2.10.1",
     "hardhat-change-network": "^0.0.7",
     "hardhat-deploy": "^0.11.20",
@@ -50,8 +51,8 @@
     "compile"
   ],
   "dependencies": {
-    "lodash": "^4.17.21",
     "@socket.tech/dl-core": "^2.4.41",
+    "lodash": "^4.17.21",
     "prompts": "^2.4.2"
   }
 }
