--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@typechain/hardhat": "^6.0.0",
     "@types/mocha": "^9.1.0",
     "@types/node": "^18.11.9",
+    "@types/prompts": "^2.4.9",
     "@types/yargs": "^17.0.22",
     "dotenv": "^16.0.3",
     "ethers": "^5.6.6",
@@ -44,14 +45,18 @@
     "buildJson": "npx ts-node ./script/helpers/updateJsons.ts",
     "abi": "hardhat export-abi",
     "compile": "forge build",
-    "test": "forge test"
+    "test": "forge test",
+    "setup:dependencies": "yarn && yarn add @socket.tech/dl-core",
+    "script:setup": "yarn setup:dependencies && npx ts-node script/setup.ts",
+    "script:deploy": "yarn setup:dependencies && npx hardhat run script/deploy.ts",
+    "script:verify": "yarn setup:dependencies && npx hardhat run script/deploy/verifyContracts.ts"
   },
   "pre-commit": [
     "lint",
     "compile"
   ],
   "dependencies": {
-    "@socket.tech/dl-core": "^2.4.41",
+    "@socket.tech/dl-core": "^2.6.0",
     "lodash": "^4.17.21",
     "prompts": "^2.4.2"
   }
