feat: socket command

--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "setup:dependencies": "yarn && yarn add @socket.tech/dl-core",
     "script:setup": "yarn setup:dependencies && npx ts-node script/setup.ts",
     "script:deploy": "npx hardhat run script/deploy.ts",
-    "script:verify": "npx hardhat run script/deploy/verifyContracts.ts"
+    "script:verify": "npx hardhat run script/deploy/verifyContracts.ts",
+    "setup": "ts-node setup.ts"
   },
   "pre-commit": [
     "lint",
