Use second-signer for signing txs on Kinto

--- a/.env.example
+++ b/.env.example
@@ -2,8 +2,9 @@ PROJECT='' # for superbridge aevo, lyra
 TOKENS='' # WETH, USDT
 DRY_RUN='false' # true, false
 
-OWNER_SIGNER_KEY=''
-OWNER_ADDRESS=''
+OWNER_SIGNER_KEY='' # private key of owner
+OWNER_ADDRESS='' # contract owner on non-Kinto chain
+KINTO_OWNER_ADDRESS='' # contract owner on Kinto chain
 
 ARBISCAN_API_KEY=''
 BSCSCAN_API_KEY=''
