feat: add setup script for all

--- a/package.json
+++ b/package.json
@@ -46,11 +46,12 @@
     "abi": "hardhat export-abi",
     "compile": "forge build",
     "test": "forge test",
+    "setup:all": "forge install && yarn install && yarn build && yarn setup:dependencies && yarn setup:socket",
     "setup:dependencies": "yarn && yarn add @socket.tech/dl-core",
     "script:setup": "yarn setup:dependencies && npx ts-node script/setup.ts",
     "script:deploy": "npx hardhat run script/deploy.ts",
     "script:verify": "npx hardhat run script/deploy/verifyContracts.ts",
-    "setup": "ts-node setup.ts"
+    "setup:socket": "ts-node setup.ts"
   },
   "pre-commit": [
     "lint",
