--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
   ],
   "dependencies": {
     "@socket.tech/dl-core": "https://github.com/KintoXYZ/socket-DL.git",
+    "@kinto-utils": "https://github.com/KintoXYZ/kinto-utils.git",
     "lodash": "^4.17.21",
     "prompts": "^2.4.2"
   }
