--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,7 @@ OWNER_ADDRESS='' # owner of socket contracts on non-Kinto chains (we recommend t
 KINTO_OWNER_ADDRESS='' # owner of socket contracts on Kinto chain (use Kinto Wallet)
 ACCOUNT_INDEX='' # account index on HW wallet (optional)
 
+# safe addresses (used on change-ownership script to nominate new owner)
 MAINNET_SAFE="0xf152Abda9E4ce8b134eF22Dc3C6aCe19C4895D82"
 ARBITRUM_SAFE="0x8bFe32Ac9C21609F45eE6AE44d4E326973700614"
 BASE_SAFE="0x45e9deAbb4FdD048Ae38Fce9D9E8d68EC6f592a2"
