--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "script:bridge": "npx ts-node script/bridge/bridge.ts",
     "project:new": "npx ts-node script/script.ts new",
     "project:edit": "npx ts-node script/script.ts edit",
-    "project:addToken": "npx ts-node script/script.ts addToken",
+    "project:addToken": "npx ts-node script/script.ts add_token",
     "bridge": "npx hardhat run script/bridge/bridge.ts"
   },
   "pre-commit": [
