Add support for TREZOR hardware wallet by updating environment variables and modifying private key handling in scripts.

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
 NODE_ENV="production"
+HARDWARE_WALLET="TREZOR"
 PROJECT='kinto_mainnet' # for superbridge aevo, lyra
 PROJEC_TYPE='superbridge' 
 TOKENS='' # WETH,USDT
